--- a/app/src/main/res/layout/activity_administrator_view.xml
+++ b/app/src/main/res/layout/activity_administrator_view.xml
@@ -40,7 +40,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.303">
+        app:layout_constraintVertical_bias="0.29">
 
         <Button
             android:id="@+id/buttonSearchAdm"
@@ -62,7 +62,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.454">
 
         <Button
             android:id="@+id/buttonNewCreateBookAdm"
@@ -85,7 +86,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.688">
+        app:layout_constraintVertical_bias="0.629">
 
         <Button
             android:id="@+id/buttonNewAuthorAdm"
@@ -108,7 +109,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.841">
+        app:layout_constraintVertical_bias="0.803">
 
         <Button
             android:id="@+id/buttonNewPublisher"
