--- a/app/src/main/res/layout/activity_new_user_account.xml
+++ b/app/src/main/res/layout/activity_new_user_account.xml
@@ -292,7 +292,7 @@
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:backgroundTint="@android:color/holo_blue_bright"
-                   android:text="Create a New User"
+                   android:text="Create New User"
                    android:textColor="@android:color/white"
                    tools:layout_editor_absoluteX="148dp"
                    tools:layout_editor_absoluteY="368dp" />
