--- a/app/src/main/res/layout/activity_search_by_book.xml
+++ b/app/src/main/res/layout/activity_search_by_book.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.anakarinacarrocci.fastcheckoutlibrary.BookSearch"
+    tools:context="com.example.anakarinacarrocci.fastcheckoutlibrary.SearchByBook"
     android:background="@drawable/background_blue">
 
     <LinearLayout
-        android:layout_width="110dp"
-        android:layout_height="23dp"
+        android:layout_width="201dp"
+        android:layout_height="22dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -22,171 +22,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Search by:"
+            android:text="Search by Book:"
             android:textAlignment="center"
             android:textColor="@android:color/white"
             android:textSize="18sp"
             android:textStyle="bold"
             tools:layout_editor_absoluteX="63dp"
             tools:layout_editor_absoluteY="135dp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="88dp"
-        android:layout_height="26dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.097"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.115">
-
-        <TextView
-            android:id="@+id/textViewSearchAuthor"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Author"
-            android:textAlignment="center"
-            android:textColor="@android:color/white"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            tools:layout_editor_absoluteX="63dp"
-            tools:layout_editor_absoluteY="135dp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="234dp"
-        android:layout_height="58dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.853"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.124">
-
-        <EditText
-            android:id="@+id/editTextSearchInputAuthor"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:backgroundTint="@android:color/white"
-            android:inputType="textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine"
-            android:singleLine="false"
-            android:textAlignment="viewStart"
-            android:textColor="@android:color/white"
-            tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="18dp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="84dp"
-        android:layout_height="33dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.096"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.269">
-
-        <TextView
-            android:id="@+id/textViewSearchGender"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Gender"
-            android:textAlignment="center"
-            android:textColor="@android:color/white"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            tools:layout_editor_absoluteX="63dp"
-            tools:layout_editor_absoluteY="135dp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="157dp"
-        android:layout_height="33dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.563"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.269"
-        android:id="@+id/linearLayout">
-
-        <RadioButton
-            android:id="@+id/radioButtonSearchM"
-            android:layout_width="368dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:buttonTint="@android:color/white"
-            android:text="M"
-            android:textColor="@android:color/white"
-            android:textSize="18sp"
-            tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="661dp" />
-
-        <RadioButton
-            android:id="@+id/radioButtonSearchF"
-            android:layout_width="368dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:buttonTint="@android:color/white"
-            android:text="F"
-            android:textColor="@android:color/white"
-            android:textSize="18sp"
-            tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="577dp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="86dp"
-        android:layout_height="51dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.097"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.423">
-
-        <TextView
-            android:id="@+id/textViewSearchCountry"
-            android:layout_width="85dp"
-            android:layout_height="wrap_content"
-            android:text="Author's Country"
-            android:textAlignment="center"
-            android:textColor="@android:color/white"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            tools:layout_editor_absoluteX="63dp"
-            tools:layout_editor_absoluteY="135dp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="244dp"
-        android:layout_height="55dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.893"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.428">
-
-        <ExpandableListView
-            android:id="@+id/genreList"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:cacheColorHint="@android:color/white"
-            android:drawable="@android:color/white"
-            android:state_pressed="true"
-            tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="8dp" />
-
     </LinearLayout>
 
     <LinearLayout
@@ -194,11 +36,11 @@
         android:layout_height="49dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.096"
+        app:layout_constraintHorizontal_bias="0.093"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.593">
+        app:layout_constraintVertical_bias="0.121">
 
         <TextView
             android:id="@+id/textViewSearchBook"
@@ -219,11 +61,11 @@
         android:layout_height="58dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.853"
+        app:layout_constraintHorizontal_bias="0.826"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.605">
+        app:layout_constraintVertical_bias="0.123">
 
         <EditText
             android:id="@+id/editTextSearchInputBookName"
@@ -240,22 +82,22 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="89dp"
-        android:layout_height="47dp"
+        android:layout_width="85dp"
+        android:layout_height="49dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.098"
+        app:layout_constraintHorizontal_bias="0.093"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.756">
+        app:layout_constraintVertical_bias="0.285">
 
         <TextView
-            android:id="@+id/textViewSearchGenre"
+            android:id="@+id/textViewSearchPublisher"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Book Genre"
+            android:text="Publisher"
             android:textAlignment="center"
             android:textColor="@android:color/white"
             android:textSize="18sp"
@@ -265,18 +107,168 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="244dp"
-        android:layout_height="55dp"
+        android:layout_width="234dp"
+        android:layout_height="58dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.893"
+        app:layout_constraintHorizontal_bias="0.826"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.769">
+        app:layout_constraintVertical_bias="0.291">
+
+        <EditText
+            android:id="@+id/editTextSearchInputPublisher"
+            android:layout_width="230dp"
+            android:layout_height="44dp"
+            android:layout_weight="1"
+            android:backgroundTint="@android:color/white"
+            android:inputType="textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine"
+            android:singleLine="false"
+            android:textAlignment="viewStart"
+            android:textColor="@android:color/white"
+            tools:layout_editor_absoluteX="129dp"
+            tools:layout_editor_absoluteY="283dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="85dp"
+        android:layout_height="49dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.093"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.448">
+
+        <TextView
+            android:id="@+id/textViewSearchYear"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Year"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            tools:layout_editor_absoluteX="63dp"
+            tools:layout_editor_absoluteY="135dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="234dp"
+        android:layout_height="58dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.826"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.456">
+
+        <EditText
+            android:id="@+id/editTextSearchYear"
+            android:layout_width="230dp"
+            android:layout_height="44dp"
+            android:layout_weight="1"
+            android:backgroundTint="@android:color/white"
+            android:inputType="textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine"
+            android:singleLine="false"
+            android:textAlignment="viewStart"
+            android:textColor="@android:color/white"
+            tools:layout_editor_absoluteX="129dp"
+            tools:layout_editor_absoluteY="283dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="85dp"
+        android:layout_height="49dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.093"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.621">
+
+        <TextView
+            android:id="@+id/textViewSearchEdition"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Edition"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            tools:layout_editor_absoluteX="63dp"
+            tools:layout_editor_absoluteY="135dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="234dp"
+        android:layout_height="58dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.826"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.633">
+
+        <EditText
+            android:id="@+id/editTextSearchInputYear"
+            android:layout_width="230dp"
+            android:layout_height="44dp"
+            android:layout_weight="1"
+            android:backgroundTint="@android:color/white"
+            android:inputType="textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine"
+            android:singleLine="false"
+            android:textAlignment="viewStart"
+            android:textColor="@android:color/white"
+            tools:layout_editor_absoluteX="129dp"
+            tools:layout_editor_absoluteY="283dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="85dp"
+        android:layout_height="49dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.093"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.779">
+
+        <TextView
+            android:id="@+id/textViewSearchGenre"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Genre"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            tools:layout_editor_absoluteX="63dp"
+            tools:layout_editor_absoluteY="135dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="234dp"
+        android:layout_height="58dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.826"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.794">
 
         <ExpandableListView
-            android:id="@+id/CountryList"
+            android:id="@+id/GenreList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:cacheColorHint="@android:color/white"
@@ -284,7 +276,6 @@
             android:state_pressed="true"
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="8dp" />
-
     </LinearLayout>
 
     <LinearLayout
@@ -295,11 +286,10 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.922"
-        app:layout_constraintHorizontal_bias="0.498">
+        app:layout_constraintVertical_bias="0.939">
 
         <Button
-            android:id="@+id/buttonSearch"
+            android:id="@+id/buttonSearchBook"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
