Reformat code, create enums to keep track of constant IDs, create functionality to add new user

--- a/app/src/main/res/layout/activity_list_of_books_results.xml
+++ b/app/src/main/res/layout/activity_list_of_books_results.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.anakarinacarrocci.fastcheckoutlibrary.ListOfBooksResults"
+    tools:context="com.example.anakarinacarrocci.fastcheckoutlibrary.com.fastcheckoutlibrary.backend.ListOfBooksResults"
     android:background="@drawable/background_blue">
 
     <LinearLayout
