--- a/app/src/main/res/layout/activity_administrator_view.xml
+++ b/app/src/main/res/layout/activity_administrator_view.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.anakarinacarrocci.fastcheckoutlibrary.AdminView"
+    tools:context="com.example.anakarinacarrocci.fastcheckoutlibrary.com.fastcheckoutlibrary.backend.AdminView"
     android:background="@drawable/background_blue"
     tools:layout_editor_absoluteY="81dp"
     tools:layout_editor_absoluteX="0dp">
