--- a/app/src/main/res/layout/activity_search_by_book.xml
+++ b/app/src/main/res/layout/activity_search_by_book.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.anakarinacarrocci.fastcheckoutlibrary.SearchByBook"
+    tools:context="com.example.anakarinacarrocci.fastcheckoutlibrary.com.fastcheckoutlibrary.backend.SearchByBook"
     android:background="@drawable/background_blue">
 
     <LinearLayout
