--- a/app/src/main/res/layout/activity_search_by_publisher.xml
+++ b/app/src/main/res/layout/activity_search_by_publisher.xml
@@ -117,15 +117,11 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.3">
 
-        <ExpandableListView
-            android:id="@+id/PublisherCountryList"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:cacheColorHint="@android:color/white"
-            android:drawable="@android:color/white"
-            android:state_pressed="true"
-            tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="8dp" />
+        <Spinner
+            android:id="@+id/editCountry"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
     </LinearLayout>
 
     <LinearLayout
@@ -149,4 +145,5 @@
             tools:layout_editor_absoluteX="148dp"
             tools:layout_editor_absoluteY="368dp" />
     </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
