--- a/app/src/main/res/layout/activity_admin_insert_author.xml
+++ b/app/src/main/res/layout/activity_admin_insert_author.xml
@@ -166,6 +166,10 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.433">
 
+        <RadioGroup
+            android:id="@+id/radioGroupNewGender"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
         <RadioButton
             android:id="@+id/radioButtonInsertM"
             android:layout_width="368dp"
@@ -189,6 +193,7 @@
             android:textSize="18sp"
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="577dp" />
+        </RadioGroup>
     </LinearLayout>
 
     <LinearLayout
@@ -226,78 +231,15 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.57">
 
-        <ExpandableListView
-            android:id="@+id/InsertGenreList"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:cacheColorHint="@android:color/white"
-            android:drawable="@android:color/white"
-            android:state_pressed="true"
-            tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="8dp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="95dp"
-        android:layout_height="53dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.733">
-
-        <TextView
-            android:id="@+id/textViewInsertDeathStatus"
+        <Spinner
+            android:id="@+id/spinnerNewAuthorCountry"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Death Status"
-            android:textAlignment="center"
-            android:textColor="@android:color/white"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            tools:layout_editor_absoluteX="63dp"
-            tools:layout_editor_absoluteY="135dp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="157dp"
-        android:layout_height="33dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.563"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.702">
-
-        <RadioButton
-            android:id="@+id/radioButtonInsertL"
-            android:layout_width="368dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:buttonTint="@android:color/white"
-            android:text="L"
-            android:textColor="@android:color/white"
-            android:textSize="18sp"
-            tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="661dp" />
-
-        <RadioButton
-            android:id="@+id/radioButtonInsertD"
-            android:layout_width="368dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:buttonTint="@android:color/white"
-            android:text="D"
-            android:textColor="@android:color/white"
-            android:textSize="18sp"
-            tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="577dp" />
+            android:entries="@array/country_arrays"
+            android:prompt="@string/country_prompt"
+            tools:layout_editor_absoluteX="61dp"
+            tools:layout_editor_absoluteY="180dp"/>
     </LinearLayout>
 
     <LinearLayout
