--- a/app/src/main/res/layout/activity_admin_insert_publisher.xml
+++ b/app/src/main/res/layout/activity_admin_insert_publisher.xml
@@ -117,15 +117,15 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.3">
 
-        <ExpandableListView
-            android:id="@+id/InsertPublisherCountryList"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:cacheColorHint="@android:color/white"
-            android:drawable="@android:color/white"
-            android:state_pressed="true"
-            tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="8dp" />
+        <Spinner
+            android:id="@+id/spinnerNewPublisherCountry"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:entries="@array/country_arrays"
+            android:prompt="@string/country_prompt"
+            tools:layout_editor_absoluteX="61dp"
+            tools:layout_editor_absoluteY="180dp"/>
     </LinearLayout>
 
     <LinearLayout
