--- a/app/src/main/res/layout/activity_search_by_publisher.xml
+++ b/app/src/main/res/layout/activity_search_by_publisher.xml
@@ -121,7 +121,11 @@
             android:id="@+id/editCountry"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:entries="@array/country_arrays"
+            android:prompt="@string/country_prompt"
+            tools:layout_editor_absoluteX="61dp"
+            tools:layout_editor_absoluteY="180dp"/>
     </LinearLayout>
 
     <LinearLayout
